# browser-agent

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  debug_selector.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  slider_debug.py
.github/workflows/: ci.yml
deploy/: DEPLOYMENT.md  cloudrun.yaml  ecs-task.json
directives/: browser_fields_selector.md
src/: __init__.py  config.py  main.py
src/core/: __init__.py  browser_agent.py  orchestrator.py  session.py
src/intelligence/: __init__.py  llm_client.py  prompts.py
src/learning/: __init__.py  confidence_scorer.py  memory_store.py
src/notifications/: __init__.py  email_service.py
src/utils/: __init__.py  logging_config.py
tests/: test_core.py
