[project]
name = "browser-learning-agent"
version = "0.1.0"
description = "An intelligent browser automation system powered by LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Caique Rivero", email = "caique.rivero@gmail.com"}
]

[project.scripts]
browser-agent = "src.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
